<resources>
    <string name="app_name">Welcome to EZLog</string>
    <string name="view_exercise_list">Exercise List</string>
    <string name="view_workout">Last Workout</string>
    <string name="start_workout">Start a Workout</string>
    <string name="view_workout_history">Workout History</string>
    <string name="title_home">Home</string>
    <string name="title_start_workout">Workout</string>
    <string name="title_workout_history">Previous Workouts</string>
    <string name="title_do_workout">Workout</string>
    <string name="title_activity_enter_set">EnterSetActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="exercise">Exercise</string>
    <string name="weight">Weight</string>
    <string name="reps">Repititions</string>
    <string name="hint_enter_weight">Enter Weight</string>
    <string name="hint_enter_reps">Enter Repitions</string>
    <string name="choose_exercise">Select Exercise</string>
    <string name="chosen_exercise">Exercise Selected</string>
    <string name="select_date">Pick Date</string>
    <string name="select_workout">Workout</string>
    <string name="select_exercise_list">Exercises</string>
    <string name="toolbar_select_date">Pick Date</string>
    <string name="toolbar_exercise_list">Exercises</string>
    <string name="toolbar_start_workout">Workout</string>
    <string name="toolbar_previous_workouts">Workout History</string>
    <string name="toolbar_last_workout">Last Workout</string>
</resources>
